data/usersCode/ghdt/question4/error.txt
/home/rutuja/myenv/RC/data/usersCode/ghdt/question4/code4-0.cpp:1:1: error: ‘FSdgf’ does not name a type
 FSdgf
 ^~~~~
